cleaned_yaml/golang-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - env: []
        image: iamabhiraj/golang-app:{IMAGE_TAG}
        imagePullPolicy: IfNotPresent
        name: web-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      volumes: []
