cleaned_yaml/golang-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-app
  namespace: default
spec:
  ports:
  - name: null
    port: 80
    targetPort: 8080
  selector:
    app: golang-app
  type: NodePort
